# MechanicalMind-Dependency-AI

./: .black  .configure_token.sh  .coverage  .env  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .project_guardian.py  .reconfigure_repo.sh  .sorpresa.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  analysis_report.html  analysis_report.json  configure_token.sh  create_pr  data  dependency_analyzer.py  diagnose.py  docker-compose.mermaid.yml  env.production  error_diagnosis_engine.py  mechmind_cli.py  package-lock.json  package.json  pip_secure_install.py  pyproject.toml  pytest.ini  reconfigure_repo.sh  requeriments.docs.txt  requirements-dev.txt  requirements-test.txt  requirements.fixed.txt  requirements.txt  setup.py  tall pytest pytest-cov
.github/: STRUCTURE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: .feature.request.md  CONTRIBUTING.md  ayuda-configuracion.md  bug.report.md  config.yml  documentacion.md  problema-rendimiento.md  reporte-dependencias.md  reporte-error.md  solicitud-funcionalidad.md
.github/actions/: MECHBOT_README.md  MECHBOT_SECRETS.env  action.yml  cleanup-action.yml  dependency-scan  dependency-scan.yml  download-artifact@v4.2.1
.github/actions/cancel-workflows/: action.yml  🕶️ MECHBOT_GITIGNORE  🛡️ CORE WEAPONS SYSTEMS
.github/github/actions/: demo.yml
.github/workflows/: CI.yml  Ci.yml  DEPENDENCY_SENTINEL_ACTIVATION  TACTICAL_SCAN_OPERATION  TACTICAL_SCAN_OPERATION.yaml  action.yml  ci.yml  dependency-scan.yml  dependency_ai.yml  deps.yml  django.yml  health-check.yml  main.yml  python-package.yml  python_CI.yml  runner-cleanup.yml  runner-maintenance.yml  runner_cleanup.yml  tests.yml  yml  ⬇️ INFILTRATE CODEBASE  🏁 MISSION PARAMETERS SUMMARY  📌 TACTICAL STATUS REPORT  📡 UPLOAD SARIF SURVEILLANCE DATA  🔔 ALERT SECURITY COUNCIL  🔧 CONFIGURE NODE.JS BATTLE STATION  🚀 LAUNCH AI SCAN MISSILE  🤖 DEPLOY AUTOMATED FIXES
.github/workflows/backup/: CI.yml  TACTICAL_STATUS_REPORT.yml  action.yml  dependency-scan.yml  dependency_ai.yml  deps.yml  diagrams.yml  django.yml  docs.yml  health-check.yml  main.yml  python_CI.yml  runner_cleanup.yml  tests.yml
.github/workflows/python/: CI.yml
ai-_core/: compatibility_matrix.py
ai_core/: __init__.py  auto_fix_module.py  compatibility_matrix.py  dependency_analyzer.py  diagnose.py  error_diagnosis_engine.py  troubleshoot.py
ai_core/knowledge_base/: __init__.py  common_errors.json  version_compatibility.db
ai_core/tests/unit_tests/: test_dependency_analyzer.py
ai_core/utils/: __init__.py  file_helpers.py  logging_config.py  network_helpers.py
ai_core/utils /: file_helpers.py  logging_config.py  network_helpers.py
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Core Infrastructure Stack.md  Filesystem  Roadmap  SECURITY.md  SECURITY_POLICY.md  STATUS.md  STRUCTURE.md  TESTING.md  autodoc.py  docker-compose.mermaid.yml  ore Infrastructure Stack  requeriments.docs.txt
docs/.github/workflows/: dependency_ai.yml
docs/Architecture/diagram/: graph TD  graph_TD
docs/SEGURITY/: Auto-Hospedado.md
docs/architectural/: Overview
docs/architectural/diagram/: Overview
docs/architecture/: README.md  package.json
docs/architecture/diagrams/: README.md  cache_flow.mmd  system_context.mmd
docs/architecture/scripts/: generate_diagrams.sh
docs/architecture/views/: README.md
docs/github/accion/: .md  MECHANICAL_MIND_SECURITY VAULT.md
docs/monitoring/: Dashboard.md
docs/scripts/: setup_runner.sh
docs/source/architecture/: service_topology.rst
docs/source/requirements/: app_framework.rst  core_infrastructure.rst
ia_core/: dependency_analyzer.py  error_diagnosis_engine.py
project-root/: STRUCTURE.md
requirements/: base.txt  dev.txt  freeze.txt  test.txt
scripts/: auto_deploy.py  cli.py  generate_diagrams.sh  integrate_docs.sh  master_integration.sh  mermaid.css  monitoring_alerts.sh  setup_environment.sh  setup_runner.sh
scripts/reportar/: vulnerabilidad.sh
scripts/scripts/: setup_environment.sh
scripts/setup/: environment.sh  runner.sh
src/: pyproject.toml  setup.py
src/mechanicalmind/: __init__.py  setup.py
tests/: conftest.py  mocks.py  reportar_vulnerabilidad.sh  requirements-test.txt  setup_runner.sh
tests/src/: test_knowledge_base.py
tests/unit_tests/: test_compatibility_matrix.py  test_dependency_analyzer.py  test_knowledge_base.py  test_utils_init.py
utils/: file_helpers.py  logging_config.py  network_helpers.py
(+23 files in other folders)
