[build-system]
# Sistema de construcción optimizado para IA
requires = [
    "setuptools>=68.0.0",  # Soporte para últimas features de Python
    "wheel>=0.40.0",       # Builds más rápidos y eficientes
    "cython>=0.29.0"       # Para componentes críticos de rendimiento (opcional)
]
build-backend = "setuptools.build_meta"

[project]
# Identidad del proyecto
name = "mechanicalmind_ai"  # Nombre técnico único
dynamic = ["version"]  # Versión gestionada automáticamente (recomendado)

# Metadatos esenciales
description = "Next-gen AI for intelligent dependency resolution and conflict prediction"
readme = "README.md"
requires-python = ">=3.9"  # Python moderno como base

# Autores principales (equipo IA)
authors = [
    {name = "Benjamín Cabeza Duran", email = "benjamin.cabezaduran@gmail.com"},
    {name = "Deepseek AI Core Team", email = "ia.mechmind@gmail.com"}
]

# Características técnicas
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Framework :: Jupyter",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

# Sistema de gestión de versiones avanzado
[tool.setuptools_scm]
write_to = "src/mechanicalmind_ia/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

# Dependencias principales con versiones exactas para reproducibilidad
dependencies = [
    "numpy==1.24.*",  # Operaciones numéricas aceleradas
    "scipy==1.10.*",  # Algoritmos científicos
    "pandas==2.0.*",  # Procesamiento de datos
    "scikit-learn==1.3.*",  # Machine Learning
    "tqdm==4.65.*",  # Progress bars
    "requests==2.31.*",  # HTTP avanzado
    "packaging==23.1.*",  # Gestión de dependencias
    "semantic-version==2.10.*",  # Análisis semántico de versiones
    "pyyaml==6.0.*",  # Configuraciones
    "rich==13.4.*"  # Terminal interactiva
]

# Features adicionales (instalables con pip install mechanicalmind-ai[ml,dev])
[project.optional-dependencies]
ml = [
    "tensorflow==2.12.*",
    "torch==2.0.*",
    "transformers==4.30.*"
]
dev = [
    "pytest==7.4.*",
    "pytest-cov==4.1.*",
    "mypy==1.4.*",
    "black==23.7.*",
    "flake8==6.0.*"
]
gpu = [
    "cuda-python==12.1.*",
    "nvidia-cudnn==8.6.*"
]

# Puntos de entrada CLI profesionales
[project.scripts]
mechmind = "mechanicalmind.cli.main:app"
mechmind-analyze = "mechanicalmind.cli:analyze"
mechmind-scan = "mechanicalmind.cli:deep_scan"

# Configuración de paquetes (estructura src-layout)
[tool.setuptools]
packages = ["mechanicalmind"]
package-dir = {"" = "src"}
include-package-data = true

# Configuración de mypy para tipado estático
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Configuración de black para formateo
[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
